Fix expand/collapse of GScan tree items

--- a/src/styles/cylc/_gscan.scss
+++ b/src/styles/cylc/_gscan.scss
@@ -29,7 +29,7 @@
   }
   .c-gscan-workflows {
     .c-gscan-workflow {
-      .c-workflow-stopped {
+      .c-workflow-stopped > :not(.node-expand-collapse-button) {
         opacity: 0.5;
       }
       .c-gscan-workflow-name {
